--- a/RCJoy.F429/RCJoyGUI/RCJoyGUI.csproj
+++ b/RCJoy.F429/RCJoyGUI/RCJoyGUI.csproj
@@ -66,8 +66,9 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
-    <Reference Include="WindowsFormsToolkit">
+    <Reference Include="WindowsFormsToolkit, Version=0.0.3.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\wfToolkit.0.4.0\lib\net40\WindowsFormsToolkit.dll</HintPath>
+      <Private>True</Private>
     </Reference>
   </ItemGroup>
   <ItemGroup>
